--- a/.gitignore
+++ b/.gitignore
@@ -10,4 +10,4 @@ firebase_credentials.json
 
 # Ignorar cualquier archivo de configuración dentro del backend/SAMI/config/
 backend/SAMI/config/firebase_credentials.json
-docs/Informacion (1)
+docs/Informacion (1)/
