--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@ dist/
 .env
 firebase.json
 config/
-firebase_credentials.json
+firebase_crede
 
 # Ignorar cualquier archivo de configuración dentro del backend/SAMI/config/
 backend/SAMI/config/firebase_credentials.json
