--- a/backend/package.json
+++ b/backend/package.json
@@ -31,6 +31,7 @@
     "@types/jsonwebtoken": "^9.0.5",
     "@types/multer": "^1.4.10",
     "@types/node": "^20.9.0",
+    "@types/pdf-parse": "^1.1.4",
     "jest": "^29.7.0",
     "nodemon": "^3.0.1",
     "ts-jest": "^29.1.1",
