--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "node-cron": "^3.0.2",
     "openai": "^4.0.0",
     "pdf-parse": "^1.1.1",
+    "tsconfig-paths": "^4.2.0",
     "winston": "^3.11.0"
   },
   "devDependencies": {
