--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@ firebase_crede
 backend/SAMI/config/firebase_credentials.json
 docs/Informacion (1)/
 backend/SAMI/test.py
+frontend/SAMI/src/environments/environment.prod.ts
+frontend/SAMI/src/environments/environment.ts
