--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,9 @@
     "build": "tsc",
     "test": "jest"
   },
+  "_moduleAliases": {
+  "@": "./dist/"
+},
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
@@ -17,6 +20,7 @@
     "express-validator": "^7.0.1",
     "firebase-admin": "^13.0.1",
     "jsonwebtoken": "^9.0.2",
+    "module-alias": "^2.2.3",
     "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.2",
     "openai": "^4.0.0",
