--- a/app-movil/sami/pubspec.yaml
+++ b/app-movil/sami/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   shared_preferences: ^2.3.3
   jwt_decoder: ^2.0.1
   intl: ^0.19.0
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
