--- a/backend/package.json
+++ b/backend/package.json
@@ -10,9 +10,10 @@
     "test": "jest"
   },
   "_moduleAliases": {
-  "@": "./dist/"
-},
+    "@": "./dist/"
+  },
   "dependencies": {
+    "@google/generative-ai": "^0.21.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
