--- a/app-movil/sami/pubspec.yaml
+++ b/app-movil/sami/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   jwt_decoder: ^2.0.1
   intl: ^0.19.0
   url_launcher: ^6.3.1
+  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_test:
