--- a/frontend/SAMI/package.json
+++ b/frontend/SAMI/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
+    "chart.js": "^4.4.7",
     "date-fns": "^4.1.0",
     "jwt-decode": "^4.0.0",
     "rxjs": "~7.8.0",
