--- a/frontend/SAMI/package.json
+++ b/frontend/SAMI/package.json
@@ -22,7 +22,10 @@
     "@angular/router": "^18.2.0",
     "chart.js": "^4.4.7",
     "date-fns": "^4.1.0",
+    "jspdf": "^2.5.2",
     "jwt-decode": "^4.0.0",
+    "ng2-pdf-viewer": "^10.4.0",
+    "pdfjs-dist": "^4.10.38",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
