--- a/app-movil/sami/pubspec.yaml
+++ b/app-movil/sami/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   intl: ^0.19.0
   url_launcher: ^6.3.1
   google_fonts: ^6.2.1
+  video_player: ^2.9.2
+  video_player_web: ^2.3.3
 
 dev_dependencies:
   flutter_test:
