--- a/app-movil/sami/pubspec.yaml
+++ b/app-movil/sami/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   google_fonts: ^6.2.1
   video_player: ^2.9.2
   video_player_web: ^2.3.3
+  flutter_tts: ^4.2.1
+  speech_to_text: ^7.0.0
+  flutter_speech: ^2.0.1
 
 dev_dependencies:
   flutter_test:
